создана секция приветствия

--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Be Latte</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="main-wrapper content-outer-wrapper">
+        <section class="main-poster content-inner-wrapper">
+            <nav class="navigation">
+                <ul class="navigation-list">
+                    <li class="navigation-item">Home</li>
+                    <li class="navigation-item">About us</li>
+                    <img class="logo" src="img/logo.png" alt="логотип кофейни">
+                    <li class="navigation-item">Menu</li>
+                    <li class="navigation-item">Blog</li>
+                    <li class="navigation-item">Contact</li>
+                </ul>
+            </nav>
+            <div class="poster-info">
+                <h1>Welcome to Be Latte</h1>
+                <p>Enjoy of a fresh new approach to coffee. Proin gravida nibh vel velit.
+                    Auctor aliquet sollicitudin lorem quis.</p>
+                <a href="#">see menu</a>
+            </div>
+        </section>
+        <section class="about content-inner-wrapper">
+            <h2>Coffee never tasted so good!</h2>
+            <p>Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.
+                Sed non  mauris vitae erat consequat auctor eu in elit.
+                Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+        </section>
+    </div>
 </body>
 </html>
