--- a/index.html
+++ b/index.html
@@ -14,20 +14,30 @@
         <section class="poster-section content-inner-wrapper">
             <nav class="navigation">
                 <div class="navigation-list">
-                    <img class="logo" src="img/logo.png" alt="логотип кофейни">
-                    <div class="navigation-item">Home</div>
-                    <div class="navigation-item">About us</div>
-                    <div class="navigation-item">Menu</div>
-                    <div class="navigation-item">Blog</div>
-                    <div class="navigation-item">Contact</div>
+                    <img class="logo" src="img/logo.png" alt="логотип кофейни" id="home">
+                    <div class="navigation-item">
+                        <a href="#home">Home</a>
+                    </div>
+                    <div class="navigation-item">
+                        <a href="#about">About us</a>
+                    </div>
+                    <div class="navigation-item">
+                        <a href="#menu">Menu</a>
+                    </div>
+                    <div class="navigation-item">
+                        <a href="#personal_coffee">Personal coffee</a>
+                    </div>
+                    <div class="navigation-item">
+                        <a href="#contact">Contact</a>
+                    </div>
                     <div class="menu-burger-container">
                         <div class="burger-btn"></div>
                         <ul class="menu_box">
-                            <li><a class="menu_item" href="#">Home</a></li>
-                            <li><a class="menu_item" href="#">About us</a></li>
-                            <li><a class="menu_item" href="#">Menu</a></li>
-                            <li><a class="menu_item" href="#">Blog</a></li>
-                            <li><a class="menu_item" href="#">Contact</a></li>
+                            <li><a class="menu_item" href="#home">Home</a></li>
+                            <li><a class="menu_item" href="#about">About us</a></li>
+                            <li><a class="menu_item" href="#menu">Menu</a></li>
+                            <li><a class="menu_item" href="#personal_coffee">Personal coffee</a></li>
+                            <li><a class="menu_item" href="#contact">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -39,14 +49,14 @@
                 <a class="white-btn" href="#">see menu</a>
             </div>
         </section>
-        <section class="about-section content-inner-wrapper">
+        <section class="about-section content-inner-wrapper" id="about">
             <h2 class="caffe-motto">Coffee never tasted <b>so good!</b></h2>
             <p>Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.
                 Sed non  mauris vitae erat consequat auctor eu in elit.
                 Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
             <img class="cup-img" src="img/coffee-icon.png" alt="значок кружки кофе">
         </section>
-        <section class="menu-section content-inner-wrapper">
+        <section class="menu-section content-inner-wrapper" id="menu">
             <h2 class="menu-section-name">menu</h2>
             <div class="menu-list">
                 <div class="menu-item">
@@ -79,7 +89,7 @@
             </div>
             <img class="cup-img" src="img/coffee-icon.png" alt="значок кружки кофе">
         </section>
-        <section class="personalize-coffee-section content-inner-wrapper">
+        <section class="personalize-coffee-section content-inner-wrapper" id="personal_coffee">
             <h2 class="personalize-section-name">Your Personalized Coffee</h2>
             <div class="swiper-container slider-container">
                 <div class="swiper-button-prev"></div>
@@ -117,7 +127,7 @@
             </div>
             <img class="cup-img" src="img/coffee-icon.png" alt="значок кружки кофе">
         </section>
-        <section class="location-section content-inner-wrapper">
+        <section class="location-section content-inner-wrapper" id="contact">
             <h2 class="location-name-section">Location</h2>
             <div class="location-row">
                 <div class="location-info">
